<resources>
    <string name="app_name">CryptoApp</string>
    <string name="symb_template">%s / %s</string>
    <string name="update_template">Время последнего обновления: %s</string>
    <string name="slash">/</string>
    <string name="priceLabel">Цена:</string>
    <string name="minPrice">Минимум за день:</string>
    <string name="maxPrice">Максимум за день:</string>
    <string name="lastDeal">Последняя сделка:</string>
    <string name="updated">Обновлено:</string>
</resources>