<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinDetailActivity">

    <ImageView
        android:id="@+id/ivLogoCoinDetail"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvFromSymb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#D50909"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintEnd_toStartOf="@+id/tvSlash"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/slash"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoCoinDetail" />

    <TextView
        android:id="@+id/tvToSymb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0D2CD5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priceLabel"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                tools:text="7236.93"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvPriceLabel"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tvPrice"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvMinPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minPrice"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

            <TextView
                android:id="@+id/tvMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textColor="#D50909"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tvMinPriceLabel"
                app:layout_constraintTop_toBottomOf="@id/tvPrice"
                tools:text="7100.36" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tvMinPrice"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvMaxPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxPrice"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel" />

            <TextView
                android:id="@+id/tvMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textColor="#108116"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tvMaxPriceLabel"
                app:layout_constraintTop_toBottomOf="@id/tvMinPrice"
                tools:text="7500.63" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPrice"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvLastDealLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastDeal"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />

            <TextView
                android:id="@+id/tvLastDeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tvLastDealLabel"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPrice"
                tools:text="Bitfinex" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tvLastDeal"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastDealLabel" />

            <TextView
                android:id="@+id/tvUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tvUpdateLabel"
                app:layout_constraintTop_toBottomOf="@id/tvLastDeal"
                tools:text="19:43:29" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>